Add Bootstrap examples

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,14 +41,13 @@
         <ul class="navbar-nav mr-auto mt-2">
           <li class="nav-item"><a class="nav-link" href="/about">ABOUT</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="/questionnaire">QUESTIONNAIRE</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="/about">ABOUT</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="/questionnaire">QUESTIONNAIRE</a>
+            <a class="nav-link" href="/something">SOMETHING</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto mt-2">
+          <li class="nav-item">
+            <a class="nav-link" href="/myaccount">MY ACCOUNT</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">LOG OUT</a>
           </li>
