--- a/templates/index.html
+++ b/templates/index.html
@@ -8,4 +8,21 @@
     </p>
   </div>
 </div>
+<div class="card mb-3">
+  <img
+    src="https://media.sproutsocial.com/uploads/2017/02/10x-featured-social-media-image-size.png"
+    class="card-img-top"
+    alt="..."
+  />
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">
+      This is a wider card with supporting text below as a natural lead-in to
+      additional content. This content is a little bit longer.
+    </p>
+    <p class="card-text">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </p>
+  </div>
+</div>
 {% endblock %}
